# dotnet-rs

./: .descriptions.xml  .gitignore  AGENT_MEMORY.md  AGENT_PROMPT.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  README.md  REVIEW.md  build.rs  check.sh  copy_prompt.py  methods.json  paper.tex  test_atomic.rs  valgrind.supp
crates/dotnet-assemblies/: Cargo.toml  build.rs
crates/dotnet-assemblies/src/: ancestors.rs  drop_tests.rs  error.rs  host.rs  lib.rs  loader.rs  resolution.rs  support.rs  test_fixtures.rs  validation.rs  validation_tests.rs  version_tests.rs
crates/dotnet-assemblies/src/support/: Array.cs  AsyncMethodBuilders.cs  ConstructorInfo.cs  Delegate.cs  FieldInfo.cs  MemoryExtensions.cs  MethodInfo.cs  Module.cs  MulticastDelegate.cs  ParameterInfo.cs  PropertyInfo.cs  RuntimeType.cs  Span.cs  StubAttribute.cs  Task.cs  TaskAwaiters.cs  TaskCompletionSource.cs  ValueTask.cs  support.csproj
crates/dotnet-benchmarks/: Cargo.toml
crates/dotnet-benchmarks/baselines/: README.md
crates/dotnet-benchmarks/baselines/phase0/: baseline.json
crates/dotnet-benchmarks/baselines/phase6/: PROFILE_COMPARISON.md  bench-fat.json  bench-thin.json
crates/dotnet-benchmarks/benches/: cold_start.rs  end_to_end.rs  metadata_load.rs
crates/dotnet-benchmarks/examples/: stage_probe.rs
crates/dotnet-benchmarks/fixtures/arithmetic/: TightLoop_0.cs
crates/dotnet-benchmarks/fixtures/dispatch/: VirtualDispatchStress_0.cs
crates/dotnet-benchmarks/fixtures/gc/: AllocationPressure_0.cs  AllocationThroughput_0.cs
crates/dotnet-benchmarks/fixtures/gc_cross_arena/: CrossArenaGcPressure_0.cs
crates/dotnet-benchmarks/fixtures/generics/: GenericsStress_0.cs
crates/dotnet-benchmarks/fixtures/json/: JsonBenchmark_0.cs
crates/dotnet-benchmarks/fixtures/load_dominated/: LoadDominated_0.cs
crates/dotnet-benchmarks/fixtures/memory/: MemoryBulkOps_0.cs
crates/dotnet-benchmarks/fixtures/reflection/: ReflectionEnumeration_0.cs
crates/dotnet-benchmarks/fixtures/span/: SpanEquality_0.cs
crates/dotnet-benchmarks/fixtures/span_equality/: SpanEqualityFocused_0.cs
crates/dotnet-benchmarks/fixtures/stack/: StackOpsStress_0.cs
crates/dotnet-benchmarks/fixtures/string/: StringOpsSimd_0.cs
crates/dotnet-benchmarks/fixtures/unsafe_buffer/: UnsafeBufferOps_0.cs
crates/dotnet-benchmarks/scripts/: capture_baseline.py
crates/dotnet-benchmarks/src/: lib.rs
crates/dotnet-cli/: .gitignore  Cargo.toml  build.rs  dotnet-cli.sln
crates/dotnet-cli/src/: lib.rs
crates/dotnet-cli/tests/: BatchFixtures.csproj  feature_config_tests.rs  integration.rs  integration_tests.rs
crates/dotnet-cli/tests/fixtures/: arithmetic_message_0.cs  cache_test_0.cs  exception_batch_42.cs  exception_message_0.cs  exception_rethrow_42.cs  gc_finalization_42.cs  layout_test_0.cs  localloc_alignment_0.cs  managed_ptr_size_0.cs  multidim_array_4.cs  null_ref_message_0.cs  property_42.cs  ref_param_0.cs  ref_struct_gc_safety_42.cs  span_gc_safety_42.cs  span_pinnable_stack_0.cs  span_stack_read_0.cs  string_length_5.cs  test_array_basic_42.cs  unsafe_asref_0.cs  unsafe_hidden_root_13.cs
crates/dotnet-cli/tests/integration_tests_impl/: diff_harness.rs  fixtures.rs  harness.rs  macros.rs  mod.rs
crates/dotnet-exceptions/: Cargo.toml
crates/dotnet-exceptions/src/: lib.rs
crates/dotnet-intrinsics-delegates/: Cargo.toml
crates/dotnet-intrinsics-delegates/src/: helpers.rs  invoke.rs  lib.rs  operations.rs
crates/dotnet-intrinsics-reflection/: Cargo.toml
crates/dotnet-intrinsics-reflection/src/: common.rs  fields.rs  lib.rs  methods.rs  parameters.rs  resources.rs
crates/dotnet-intrinsics-reflection/src/types/: mod.rs  type_construction.rs  type_members.rs  type_queries.rs
crates/dotnet-intrinsics-simd/: Cargo.toml
crates/dotnet-intrinsics-simd/src/: handlers.rs  lib.rs
crates/dotnet-intrinsics-threading/: Cargo.toml
crates/dotnet-intrinsics-threading/src/: atomic_dispatch.rs  interlocked.rs  lib.rs  monitor.rs  thread.rs  volatile.rs
crates/dotnet-runtime-memory/: Cargo.toml
crates/dotnet-runtime-memory/src/: access.rs  heap.rs  host.rs  lib.rs  ops.rs  validation.rs  write_barrier.rs
crates/dotnet-runtime-resolver/: Cargo.toml
crates/dotnet-runtime-resolver/src/: factory.rs  layout.rs  lib.rs  methods.rs  resolution.rs  types.rs
crates/dotnet-tracer/: Cargo.toml
crates/dotnet-tracer/src/: lib.rs
crates/dotnet-utils/: Cargo.toml
crates/dotnet-utils/src/: atomic.rs  gc.rs  lib.rs  newtypes.rs  sync.rs
crates/dotnet-utils/src/gc/: arena.rs  cross_arena.rs  mod.rs  thread_safe_lock.rs
crates/dotnet-utils/src/sync/: lock_order.rs
crates/dotnet-value/: Cargo.toml
crates/dotnet-value/fuzz/: Cargo.toml
crates/dotnet-value/fuzz/fuzz_targets/: fuzz_managed_ptr_offset.rs  fuzz_managed_ptr_roundtrip.rs  fuzz_raw_memory_access.rs
crates/dotnet-value/src/: atomic_tests.rs  cts_cli_conversion.rs  layout.rs  lib.rs  object.rs  object_tests.rs  pointer.rs  ptr_common.rs  stack_value.rs  storage.rs  string.rs  test_helpers.rs  validation.rs  validation_tests.rs
crates/dotnet-value/src/layout/: mod.rs
crates/dotnet-value/tests/: layout_sizes.rs
crates/dotnet-vm/: Cargo.toml  build.rs
crates/dotnet-vm-data/: Cargo.toml
crates/dotnet-vm-data/src/: lib.rs  stack.rs
crates/dotnet-vm-data/tests/: layout_sizes.rs
crates/dotnet-vm-ops/: Cargo.toml
crates/dotnet-vm-ops/src/: exceptions.rs  intrinsic_args.rs  lib.rs  macros.rs  ops.rs  prepared_call.rs  stack.rs
crates/dotnet-vm/build_support/: codegen.rs  mod.rs  parser.rs  scanner.rs
crates/dotnet-vm/fuzz/: .gitignore  Cargo.toml  README.md  cil.dict  fuzz_executor.options
crates/dotnet-vm/src/: branch_hint.rs  context.rs  conversion_regression_tests.rs  dispatch.rs  error.rs  exceptions.rs  executor.rs  fault_tests.rs  fuzzing.rs  instructions.rs  intrinsics_codegen_guard_tests.rs  jmp_tests.rs  layout.rs  lib.rs  macros.rs  memory.rs  metrics.rs  pinvoke.rs  resolution.rs  resolver.rs  stack.rs  state.rs  statics.rs  tail_calls_tests.rs  test_utils.rs  tracer.rs
(+465 files in other folders)
