[workspace]
members = [
    "xtask",
    "crates/dotnet-build-tools",
    "crates/dotnet-types",
    "crates/dotnet-utils",
    "crates/dotnet-value",
    "crates/dotnet-assemblies",
    "crates/dotnet-runtime-resolver",
    "crates/dotnet-runtime-memory",
    "crates/dotnet-intrinsics-core",
    "crates/dotnet-intrinsics-delegates",
    "crates/dotnet-intrinsics-span",
    "crates/dotnet-intrinsics-string",
    "crates/dotnet-intrinsics-threading",
    "crates/dotnet-intrinsics-reflection",
    "crates/dotnet-intrinsics-unsafe",
    "crates/dotnet-simd",
    "crates/dotnet-metrics",
    "crates/dotnet-tracer",
    "crates/dotnet-vm-data",
    "crates/dotnet-vm-ops",
    "crates/dotnet-vm",
    "crates/dotnet-exceptions",
    "crates/dotnet-pinvoke",
    "crates/dotnet-cli",
    "crates/dotnet-benchmarks",
    "crates/dotnet-macros",
    "crates/dotnet-macros-core",
]
resolver = "2"

[workspace.dependencies]
dotnet-types = { path = "crates/dotnet-types" }
dotnet-build-tools = { path = "crates/dotnet-build-tools" }
dotnet-utils = { path = "crates/dotnet-utils", default-features = false }
dotnet-value = { path = "crates/dotnet-value", default-features = false }
dotnet-assemblies = { path = "crates/dotnet-assemblies" }
dotnet-runtime-resolver = { path = "crates/dotnet-runtime-resolver", default-features = false }
dotnet-runtime-memory = { path = "crates/dotnet-runtime-memory", default-features = false }
dotnet-intrinsics-core = { path = "crates/dotnet-intrinsics-core", default-features = false }
dotnet-intrinsics-delegates = { path = "crates/dotnet-intrinsics-delegates", default-features = false }
dotnet-intrinsics-span = { path = "crates/dotnet-intrinsics-span", default-features = false }
dotnet-intrinsics-string = { path = "crates/dotnet-intrinsics-string", default-features = false }
dotnet-intrinsics-threading = { path = "crates/dotnet-intrinsics-threading", default-features = false }
dotnet-intrinsics-reflection = { path = "crates/dotnet-intrinsics-reflection", default-features = false }
dotnet-intrinsics-unsafe = { path = "crates/dotnet-intrinsics-unsafe", default-features = false }
dotnet-simd = { path = "crates/dotnet-simd", default-features = false }
dotnet-macros = { path = "crates/dotnet-macros" }
dotnet-macros-core = { path = "crates/dotnet-macros-core" }
dotnet-metrics = { path = "crates/dotnet-metrics" }
dotnet-tracer = { path = "crates/dotnet-tracer", default-features = false }
dotnet-vm-data = { path = "crates/dotnet-vm-data", default-features = false }
dotnet-vm-ops = { path = "crates/dotnet-vm-ops", default-features = false }
dotnet-vm = { path = "crates/dotnet-vm", default-features = false }
dotnet-exceptions = { path = "crates/dotnet-exceptions", default-features = false }
dotnet-pinvoke = { path = "crates/dotnet-pinvoke", default-features = false }
dotnetdll = { git = "https://github.com/nickbclifford/dotnetdll" }
gc-arena = { git = "https://github.com/kyren/gc-arena.git", rev = "75671ae03f53718357b741ed4027560f14e90836" }
rayon = "1"
parking_lot = "0.12"
dashmap = "6.1"
hashbrown = "0.17"
tracing = "0.1"
thiserror = "2.0"
smallvec = "1.13"
slab = "0.4"
lru = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Benchmark profile guidance:
# - Use `bench-thin` for fast benchmark iteration.
# - Use `bench-fat` for baseline comparison and final validation.
# - Optional two-pass PGO workflow for benchmarks: `scripts/bench_pgo.sh`
#   (runbook: `docs/BENCHMARK_WORKFLOW.md`).
[profile.bench-thin]
inherits = "bench"
lto = "thin"

[profile.bench-fat]
inherits = "bench"
lto = "fat"
codegen-units = 1

# Profiling profile for perf/flamegraph captures (see `scripts/profile_perf.sh`).
# Keeps the `bench-fat` optimization settings but emits full DWARF debug info and
# leaves symbols unstripped so perf can unwind stacks and resolve function names,
# including inlined frames. Kept separate from `bench-fat` so plain timing runs
# are not burdened with debuginfo link cost.
[profile.profiling]
inherits = "bench-fat"
debug = "full"
strip = false
