[package]
name = "dotnet-assemblies"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }
tracing = { workspace = true }
