[package]
name = "dotnet-assemblies"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { workspace = true }
hashbrown = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
metadata-validation = []
# Emits tracing::debug events with elapsed_ns per dotnetdll parse stage (assembly, fields,
# methods, …). Enable when profiling assembly load time.
stage-timing = ["dotnetdll/stage-timing"]

[build-dependencies]
dotnet-build-tools = { workspace = true }
