[package]
name = "dotnet-benchmarks"
version = "0.1.0"
edition = "2024"

[features]
default = ["multithreading"]
generic-constraint-validation = ["dotnet-vm/generic-constraint-validation"]
multithreading = [
    "dep:parking_lot",
    "dotnet-vm/multithreading",
]
simd = ["dotnet-vm/simd"]
memory-validation = ["dotnet-vm/memory-validation"]
metadata-validation = ["dotnet-vm/metadata-validation"]
validation-all = [
    "dotnet-vm/validation-all",
    "memory-validation",
    "metadata-validation",
    "generic-constraint-validation",
]
fuzzing = ["dotnet-vm/fuzzing"]
# Enables benchmark harness access to runtime instrumentation snapshots/counters.
bench-instrumentation = ["dotnet-vm/bench-instrumentation"]
# Enables heap diagnostics in benchmark runs for analysis-only scenarios.
heap-diagnostics = ["dotnet-vm/heap-diagnostics"]
# Enables lock-order/deadlock diagnostics for benchmark stress/debug sessions.
deadlock-diagnostics = ["multithreading", "dotnet-vm/deadlock-diagnostics"]
# Enables eval-stack growth-policy prototype benchmarking.
segmented-eval-stack-prototype = ["dotnet-vm/segmented-eval-stack-prototype"]
# Bench-only switch for vm jump-table dispatch variant.
instruction-dispatch-jump-table = ["dotnet-vm/instruction-dispatch-jump-table"]
# Bench-only switch for vm super-instruction prototype variant.
dispatch-super-instruction-prototype = ["dotnet-vm/dispatch-super-instruction-prototype"]

[dependencies]
dotnet-assemblies = { workspace = true }
dotnet-types = { workspace = true }
dotnet-vm = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
parking_lot = { workspace = true, optional = true }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "end_to_end"
harness = false
