[package]
name = "dotnet-benchmarks"
version = "0.1.0"
edition = "2024"

[features]
default = ["multithreading"]
generic-constraint-validation = ["dotnet-vm/generic-constraint-validation"]
multithreading = [
    "dotnet-vm/multithreading",
]
simd = ["dotnet-vm/simd"]
memory-validation = ["dotnet-vm/memory-validation"]
metadata-validation = ["dotnet-vm/metadata-validation"]
validation-all = [
    "dotnet-vm/validation-all",
    "memory-validation",
    "metadata-validation",
    "generic-constraint-validation",
]
fuzzing = ["dotnet-vm/fuzzing"]
# Enables benchmark harness access to runtime instrumentation snapshots/counters.
bench-instrumentation = ["dotnet-vm/bench-instrumentation"]
# Enables heap diagnostics in benchmark runs for analysis-only scenarios.
heap-diagnostics = ["dotnet-vm/heap-diagnostics"]
# Enables lock-order/deadlock diagnostics for benchmark stress/debug sessions.
deadlock-diagnostics = ["multithreading", "dotnet-vm/deadlock-diagnostics"]

[dependencies]
dotnet-assemblies = { workspace = true }
dotnet-types = { workspace = true }
dotnet-vm = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "metadata_load"
harness = false

[[bench]]
name = "cold_start"
harness = false
