[package]
name = "dotnet-cli"
version = "0.2.0"
edition = "2021"

[features]
default = ["multithreaded-gc"]
multithreading = ["dep:parking_lot", "dotnet-utils/multithreading", "dotnet-vm/multithreading"]
multithreaded-gc = ["multithreading", "dotnet-utils/multithreaded-gc", "dotnet-value/multithreaded-gc", "dotnet-vm/multithreaded-gc"]
memory-validation = ["dotnet-vm/memory-validation", "dotnet-value/memory-validation"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotnet-assemblies = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true }
dotnet-value = { workspace = true }
dotnet-assemblies = { workspace = true }
dotnet-vm = { workspace = true }
