[package]
name = "dotnet-cli"
version = "0.2.0"
edition = "2024"

[features]
default = ["multithreading"]
generic-constraint-validation = ["dotnet-vm/generic-constraint-validation"]
multithreading = [
    "dep:parking_lot",
    "dotnet-vm/multithreading",
]
simd = ["dotnet-vm/simd"]
memory-validation = ["dotnet-vm/memory-validation"]
metadata-validation = ["dotnet-vm/metadata-validation"]
validation-all = [
    "dotnet-vm/validation-all",
    "memory-validation",
    "metadata-validation",
    "generic-constraint-validation",
]
fuzzing = ["dotnet-vm/fuzzing"]
# Forwards heap diagnostics mode from vm/runtime-memory.
heap-diagnostics = ["dotnet-vm/heap-diagnostics"]
# Forwards deadlock detection diagnostics from vm multithreading runtime.
deadlock-diagnostics = ["multithreading", "dotnet-vm/deadlock-diagnostics"]
# Forwards eval-stack growth-policy prototype from vm-data stack backend.
segmented-eval-stack-prototype = ["dotnet-vm/segmented-eval-stack-prototype"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotnet-assemblies = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true }
dotnet-value = { workspace = true }
dotnet-assemblies = { workspace = true }
dotnet-vm = { workspace = true }
