[package]
name = "dotnet-intrinsics-delegates"
version = "0.1.0"
edition = "2024"

[dependencies]
dotnet-macros = { workspace = true }
dotnet-types = { workspace = true }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm-ops = { workspace = true, default-features = false }
dotnetdll = { workspace = true }

[features]
default = []
