[package]
name = "dotnet-intrinsics-reflection"
version = "0.1.0"
edition = "2024"

[dependencies]
dotnet-macros = { workspace = true }
dotnet-types = { workspace = true }
dotnet-intrinsics-delegates = { workspace = true, default-features = false }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm-data = { workspace = true, default-features = false }
dotnet-vm-ops = { workspace = true, default-features = false }
dotnetdll = { workspace = true }

[features]
default = []
generic-constraint-validation = []
