[package]
name = "dotnet-runtime-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm-ops = { workspace = true, default-features = false }
dotnet-metrics = { workspace = true, optional = true }
gc-arena = { workspace = true }
sptr = { workspace = true }
smallvec = { workspace = true }
slab = { workspace = true }

[features]
default = ["multithreading"]
multithreading = [
    "dotnet-utils/multithreading",
    "dotnet-value/multithreading",
    "dotnet-vm-ops/multithreading",
]
# Keeps full object-registry structures for diagnostics; off by default for runtime performance.
heap-diagnostics = []
memory-validation = [
    "dotnet-utils/memory-validation",
    "dotnet-value/memory-validation",
    "dotnet-vm-ops/memory-validation",
]
# Enables benchmark-only heap/memory instrumentation and metrics forwarding.
bench-instrumentation = ["dep:dotnet-metrics", "dotnet-metrics/bench-instrumentation"]
