[package]
name = "dotnet-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
gc-arena = { workspace = true }
parking_lot = { workspace = true, optional = true }
tracing = { workspace = true }
arbitrary = { version = "1.3", features = ["derive"], optional = true }

[dev-dependencies]
static_assertions = "1"

[features]
default = ["multithreading"]
multithreading = ["dep:parking_lot"]
memory-validation = []
fuzzing = ["dep:arbitrary"]
