[package]
name = "dotnet-value"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0"
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }

[features]
default = ["multithreaded-gc"]
multithreading = ["dotnet-utils/multithreading"]
multithreaded-gc = ["multithreading", "dotnet-utils/multithreaded-gc"]
memory-validation = []
