[package]
name = "dotnet-value"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0"
dashmap = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }
sptr = "0.3"
arbitrary = { version = "1.3", features = ["derive"], optional = true }

[features]
default = ["multithreaded-gc"]
multithreading = ["dotnet-utils/multithreading"]
multithreaded-gc = ["multithreading", "dotnet-utils/multithreaded-gc"]
memory-validation = ["dotnet-utils/memory-validation"]
fuzzing = ["dep:arbitrary", "dotnet-types/fuzzing", "dotnet-utils/fuzzing"]
