[package]
name = "dotnet-vm-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
dotnet-assemblies = { workspace = true }
dotnet-macros = { workspace = true }
dotnet-tracer = { workspace = true }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnet-vm-data = { workspace = true, default-features = false }
dotnetdll = { workspace = true }

[features]
default = ["multithreading"]
multithreading = [
    "dotnet-vm-data/multithreading",
    "dotnet-utils/multithreading",
    "dotnet-value/multithreading",
]
memory-validation = ["dotnet-vm-data/memory-validation", "dotnet-value/memory-validation"]
fuzzing = [
    "dotnet-vm-data/fuzzing",
    "dotnet-value/fuzzing",
    "dotnet-types/fuzzing",
    "dotnet-utils/fuzzing",
]
# Forwards benchmark-only instrumentation support into vm-data.
bench-instrumentation = ["dotnet-vm-data/bench-instrumentation"]
# Forwards the eval-stack growth-policy prototype into vm-data.
segmented-eval-stack-prototype = ["dotnet-vm-data/segmented-eval-stack-prototype"]
