[package]
name = "dotnet-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { workspace = true }
dotnet-assemblies = { workspace = true }
dotnet-exceptions = { path = "../dotnet-exceptions", default-features = false }
dotnet-metrics = { workspace = true }
dotnet-pinvoke = { path = "../dotnet-pinvoke", default-features = false }
dotnet-vm-ops = { workspace = true, default-features = false }
dotnet-tracer = { workspace = true }
dotnet-macros = { path = "../dotnet-macros" }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }
parking_lot = { workspace = true }
phf = "0.13"
sptr = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crossbeam-channel = "0.5"
arbitrary = { version = "1.3", features = ["derive"], optional = true }

[features]
default = ["multithreading"]
generic-constraint-validation = ["dotnet-types/generic-constraint-validation"]
multithreading = [
    "dotnet-utils/multithreading",
    "dotnet-value/multithreading",
    "dotnet-tracer/multithreading",
    "dotnet-vm-ops/multithreading",
    "dotnet-exceptions/multithreading",
    "dotnet-pinvoke/multithreading",
]
memory-validation = [
    "dotnet-value/memory-validation",
    "dotnet-vm-ops/memory-validation",
    "dotnet-exceptions/memory-validation",
    "dotnet-pinvoke/memory-validation",
]
metadata-validation = ["dotnet-assemblies/metadata-validation"]
validation-all = [
    "memory-validation",
    "metadata-validation",
    "generic-constraint-validation",
]
fuzzing = [
    "dep:arbitrary",
    "dotnet-value/fuzzing",
    "dotnet-types/fuzzing",
    "dotnet-utils/fuzzing",
    "dotnet-vm-ops/fuzzing",
    "dotnet-exceptions/fuzzing",
    "dotnet-pinvoke/fuzzing",
]

[build-dependencies]
dotnet-macros-core = { workspace = true }
phf_codegen = "0.13"
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2"
dotnetdll = { workspace = true }
