[package]
name = "dotnet-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { workspace = true }
dotnet-assemblies = { workspace = true }
dotnet-runtime-resolver = { workspace = true, default-features = false }
dotnet-runtime-memory = { workspace = true, default-features = false }
dotnet-exceptions = { path = "../dotnet-exceptions", default-features = false }
dotnet-intrinsics-core = { workspace = true, default-features = false }
dotnet-intrinsics-delegates = { workspace = true, default-features = false }
dotnet-intrinsics-span = { workspace = true, default-features = false }
dotnet-intrinsics-string = { workspace = true, default-features = false }
dotnet-intrinsics-threading = { workspace = true, default-features = false }
dotnet-intrinsics-reflection = { workspace = true, default-features = false }
dotnet-intrinsics-unsafe = { workspace = true, default-features = false }
dotnet-metrics = { workspace = true }
dotnet-pinvoke = { path = "../dotnet-pinvoke", default-features = false }
dotnet-vm-ops = { workspace = true, default-features = false }
dotnet-tracer = { workspace = true }
dotnet-macros = { path = "../dotnet-macros" }
dotnet-types = { workspace = true }
dotnet-utils = { workspace = true, default-features = false }
dotnet-value = { workspace = true, default-features = false }
dotnetdll = { workspace = true }
gc-arena = { workspace = true }
parking_lot = { workspace = true }
phf = "0.13"
sptr = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crossbeam-channel = "0.5"
arbitrary = { version = "1.3", features = ["derive"], optional = true }

[features]
default = ["multithreading"]
generic-constraint-validation = [
    "dotnet-types/generic-constraint-validation",
    "dotnet-runtime-resolver/generic-constraint-validation",
    "dotnet-intrinsics-reflection/generic-constraint-validation",
]
multithreading = [
    "dotnet-runtime-resolver/multithreading",
    "dotnet-runtime-memory/multithreading",
    "dotnet-utils/multithreading",
    "dotnet-value/multithreading",
    "dotnet-tracer/multithreading",
    "dotnet-pinvoke/multithreading",
]
memory-validation = [
    "dotnet-runtime-memory/memory-validation",
    "dotnet-utils/memory-validation",
    "dotnet-value/memory-validation",
]
metadata-validation = ["dotnet-assemblies/metadata-validation"]
validation-all = [
    "memory-validation",
    "metadata-validation",
    "generic-constraint-validation",
]
fuzzing = [
    "dep:arbitrary",
    "dotnet-value/fuzzing",
    "dotnet-types/fuzzing",
    "dotnet-utils/fuzzing",
    "dotnet-pinvoke/fuzzing",
]
# Enables benchmark-only runtime instrumentation/counters in vm + memory + vm-data.
bench-instrumentation = [
    "dotnet-metrics/bench-instrumentation",
    "dotnet-runtime-memory/bench-instrumentation",
    "dotnet-vm-ops/bench-instrumentation",
]
# Enables heap object-registry diagnostics path in runtime-memory.
heap-diagnostics = ["dotnet-runtime-memory/heap-diagnostics"]
# Enables eval-stack reserve-growth prototype (kept intentionally as a toggle).
segmented-eval-stack-prototype = ["dotnet-vm-ops/segmented-eval-stack-prototype"]
# Selects generated function-pointer jump-table dispatch.
instruction-dispatch-jump-table = []
# Enables super-instruction prototype handlers in dispatch loop.
dispatch-super-instruction-prototype = []

[build-dependencies]
dotnet-macros-core = { workspace = true }
phf_codegen = "0.13"
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2"
dotnetdll = { workspace = true }
